# app/Http/Controllers/User/Car/CarController.php
@@ -18,27 +18,7 @@ use OpenApi\Attributes as OAT;
         ],
     ),
 ]
-class UpdateCarOfferController extends Controller
+class CarController extends Controller
 {
-    public function __invoke(UpdateCarOfferRequestData $request, CarIdPathParameterData $path_data)
-    {
 
-        $request_car_id = $path_data->id;
-
-        $car_to_update =
-            Car::query()
-                ->where('id', $request_car_id)
-                ->update([
-                    'name_ar' => $request->name_ar,
-                    'is_new_car' => $request->is_new_car,
-                    'car_price' => $request->car_price,
-                    'fuel_type' => $request->fuel_type,
-                    'transmission' => $request->transmission,
-                    'miles_travelled_in_km' => $request->miles_travelled_in_km,
-                    'is_faragha_jahzeh' => $request->is_faragha_jahzeh,
-                    'is_khalyeh' => $request->is_khalyeh,
-                ]);
-
-        return 1;
-    }
 }
